new fields in reception

--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -73,6 +73,12 @@ $('#timepicker').timepicker();
   					<div class="form-group">
   						<input type="text" class="form-control" id="modele" name="modele" placeholder="Modèle" required>
   					</div>
+						<div class="form-group">
+							<input type="text" class="form-control" id="statutwizard" name="statutwizard" placeholder="Statut Wizard" required>
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control" id="statutagence" name="statutagence" placeholder="Statut Agence" required>
+						</div>
             <div class="form-group">
               <input type="number" class="form-control" id="num_contrat" name="num_contrat" placeholder="Numéro Contrat">
             </div>
