some modification in list agence

--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -88,7 +88,7 @@ $('#timepicker').timepicker();
 
 
 						<div class='form-group'>
-							<span class=" glyphicon glyphicon-calendar"></span> <input type="text" id="datepicker" placeholder="Date retour"> <span class=" glyphicon glyphicon-time"></span><input type="text" id="timepicker" placeholder="Heure retour">
+							<span class=" glyphicon glyphicon-calendar"></span> <input type="text" id="datepicker" placeholder="Date retour"> <span class=" glyphicon glyphicon-time"></span><input type="text" id="timepicker" placeholder="Heure retour, ex: 12:35">
 						</div>
 
             <select name="carburant" class="form-group form-control select select-primary" data-toggle="select">
