--- a/views/agence.ejs
+++ b/views/agence.ejs
@@ -6,27 +6,32 @@
 	</head>
 <body>
 
-  <h1>Ajouter agence</h1>
   <!-- local host to be changed?  -->
   <form action="/agences" method="POST">
-      Nom agence :
-      <input type="text" name="nom_agence" value="">
-      <br>
-      Adresse Agence :
-      <input type="text" name="adresse_agence" value="">
-      <br><br>
-      <input type="submit" value="Ajouter">
+		<div class="col-md-4 col-md-offset-4">
+			<h1>Ajouter agence</h1>
+		<div class="input-group input-group-sm">
+  		<span class="input-group-addon" id="sizing-addon3">Nom</span>
+  		<input type="text" class="form-control" name="nom_agence" placeholder="" aria-describedby="sizing-addon3">
+		</div>
+		<div class="input-group input-group-sm">
+			<span class="input-group-addon" id="sizing-addon3">Adresse</span>
+			<input type="text" class="form-control" name="adresse_agence" placeholder="" aria-describedby="sizing-addon3">
+		</div>
+		<br><br>
+		<div class="centered">
+		<input type="submit" value="Ajouter">
+		<br><br>
+		<h1><span class="fa fa-home"></span> Liste des agences</h1>
+		</div>
+	</div>
   </form>
 
   <% if (message.length > 0) { %>
       <div class="alert alert-danger"><%= message %></div>
   <% } %>
 <div class="container">
-
-  <div class="text-center">
-    <h1><span class="fa fa-home"></span> Liste des agences</h1>
     <br>
-  </div>
 
   <table  class = "table table-hover table-bordered text-center">
     <div class="text-center">
