--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -77,7 +77,7 @@ $('#timepicker').timepicker();
             </div>
 
             <div class='form-group'>
-              <span class=" glyphicon glyphicon-calendar"></span> <input type="text" id="datepicker" placeholder="Date retour"> <span class=" glyphicon glyphicon-time"></span><input type="text" id="timepicker" placeholder="Heure retour">
+              <span class=" glyphicon glyphicon-calendar"></span> <input type="text" id="datepicker" placeholder="Date retour"> <span class=" glyphicon glyphicon-time"></span><input type="text" id="timepicker" placeholder="Heure retour, ex: 12:35">
             </div>
 
 						<div class="form-group">
