--- a/views/parking.ejs
+++ b/views/parking.ejs
@@ -6,25 +6,27 @@
 	</head>
 <body>
 
-  <h1>Ajouter parking</h1>
   <!-- local host to be changed?  -->
-  <form action="/parking" method="POST">
-      Nom parking :
-      <input type="text" name="nom_parking" value="">
-      <br>
-      <br><br>
-      <input type="submit" value="Ajouter">
-  </form>
+	<form action="/parking" method="POST">
+		<div class="col-md-4 col-md-offset-4">
+			<h1>Ajouter Parking</h1>
+		<div class="input-group input-group-sm">
+			<span class="input-group-addon" id="sizing-addon3">Nom</span>
+			<input type="text" class="form-control" name="nom_parking" placeholder="" aria-describedby="sizing-addon3">
+		</div>
+		<br><br>
+		<div class="centered">
+		<input type="submit" value="Ajouter">
+		<br><br>
+		<h1><span class="fa fa-home"></span> Liste des Parking</h1>
+		</div>
+	</div>
+	</form>
 
   <% if (message.length > 0) { %>
       <div class="alert alert-danger"><%= message %></div>
   <% } %>
 <div class="container">
-
-  <div class="text-center">
-    <h1><span class="glyphicon glyphicon-screenshot"></span> Liste des parking</h1>
-    <br>
-  </div>
 
   <table  class = "table table-hover table-bordered text-center">
     <div class="text-center">
