no backgroun in reception

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -106,6 +106,8 @@
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3><span class="fa fa-user"></span> Mon Compte <span class="caret"></span></h3></a>
 	          <ul class="dropdown-menu">
 
+							<li><a href="/admin/signup">Ajouter un utilisateur</a></li>
+							<li role="separator" class="divider"></li>
 	            <li><a href="mailto:admin@email.fr">Contacter l'administrateur</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="/logout">Se Deconnecter</a></li>
