--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,40 +2,19 @@
 <!doctype html>
 <html>
 <head>
-	<title>AVIS MANAGEMENT</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-
-
-
-	<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
 	<style>
 		body {
 			background-repeat:no-repeat;
-			background-image:url(/images/accueil_background_flou.jpg);
 		}
 		body.container {
 			padding-top:80px;
 
 			}
 	</style>
-	<ul class="nav nav-pills">
-	<li role="presentation" class="active"><a href="/signup">Créer compte</a></li>
-	<li role="presentation"><a href="/comptes">Gérer compte</a></li>
-	<li role="presentation"><a href="/vehicule">Vehicule</a></li>
-	<li role="presentation"><a href="/logout">Déconnexion</a></li>
+
+	<% include header.ejs %>
+
 </head>
 <body>
 
