--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -16,7 +16,7 @@
 
 	<style>
 		body 		{
-		background-image:url(/images/bg.jpg);background-size:100% auto;
+		background-size:100% auto;
 		background-attachment: fixed;}
 
 	</style>
