show lists only if admin

--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -163,7 +163,7 @@
           <h3> Aspiration intérieure </h3>
           <div class="btn-group" data-toggle-name="aspiration_interieur" data-toggle="buttons">
             <label class="btn btn-primary active">
-              <input type="radio" name="n_aspiration_interieur" id="id_aspiration_interieur" autocomplete="off"> Ok
+              <input type="radio" name="n_aspiration_interieur" id="id_aspiration_interieur" autocomplete="off"> Fait
             </label>
 
             <label class="btn btn-primary">
@@ -178,7 +178,7 @@
         <h3> Lavage extérieure </h3>
         <div class="btn-group" data-toggle-name="lavage_exterieur" data-toggle="buttons">
         <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_lavage_exterieur" autocomplete="off"> Ok
+        <input type="radio" name="options" id="id_lavage_exterieur" autocomplete="off"> Fait
         </label>
         <label class="btn btn-primary">
         <input type="radio" name="options" id="id_lavage_exterieur2" autocomplete="off" checked> À faire
