--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -71,8 +71,11 @@ $('#timepicker').timepicker();
   						<input type="text" class="form-control" id="immat" name="immat" placeholder="Immatriculation" required>
   					</div>
   					<div class="form-group">
-  						<input type="text" class="form-control" id="modele" name="modele" placeholder="Modèle" required>
+  						<input type="text" class="form-control" id="proprietaire" name="proprietaire" placeholder="Propriétaire" required>
   					</div>
+						<div class="form-group">
+							<input type="text" class="form-control" id="modele" name="modele" placeholder="Modèle" required>
+						</div>
 						<div class="form-group">
 							<input type="text" class="form-control" id="statutwizard" name="statutwizard" placeholder="Statut Wizard" required>
 						</div>
@@ -92,7 +95,7 @@ $('#timepicker').timepicker();
 						</div>
 
             <select name="carburant" class="form-group form-control select select-primary" data-toggle="select">
-                <option value="0" selected>Choisir le type de carburant</option>
+                <option value="0" selected>Niveau carburant</option>
 								<option value="g1">G0</option>
 								<option value="g1">G1</option>
                 <option value="g2">G2</option>
