--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -52,6 +52,17 @@
 
 		</div>
 
+		<div class="form-group">
+
+			<select name="attribut" class="form-control select select-primary" data-toggle="select">
+					<option value="0" selected>Choisir l'agence</option>
+					<option value="administrateur">Administrateur</option>
+					<option value="opérateur">Opérateur</option>
+					<option value="utilisateur">Utilisateur</option>
+			</select>
+
+		</div>
+
 		<button type="submit" class="btn btn-warning btn-lg">Signup</button>
 	</form>
 
