--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -2,7 +2,22 @@
 <!doctype html>
 <html>
 <head>
+	<!-- DataTables CSS -->
+	<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.7/css/jquery.dataTables.css">
+
+	<!-- jQuery -->
+	<script type="text/javascript" charset="utf8" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+
+	<!-- DataTables -->
+	<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.7/js/jquery.dataTables.js"></script>
+
 	<% include header.ejs %>
+
+	<script type="text/javascript">
+	$(document).ready(function(){
+	    $('#myTable').DataTable();
+	});
+	</script>
 </head>
 
 <body>
@@ -15,21 +30,38 @@
 		<br>
   </div>
 
-	<table  class = "table table-hover table-bordered text-center">
+	<table  class = "table table-hover table-bordered text-center" id="myTable">
 		<div class="text-center">
+			<thead>
 			<tr>
 			<th> MVA</th>
 			<th> Immatriculation</th>
+			<th> Lieu actuel</th>
 			<th> Statut</th>
-			<th>Nom agence</th>
+			<th> Station départ</th>
+			<th> Station retour</th>
+			<th> Date départ</th>
+			<th> Date retour</th>
+			<th> Numéro contrat</th>
+			<th> Marque</th>
+			<th> Libellé modèle</th>
 			</tr>
+		</thead>
+	<tbody>
 	</div>
 		<% rowsv.forEach(function(vehicules){ %>
 			<tr>
 				<td> <%=vehicules.MVA%></td>
 				<td> <%=vehicules.IMMAT%></td>
+				<td> <%=vehicules.CURRENT_LOCATION_STN%></td>
 				<td> <%=vehicules.STATUT%></td>
-				<td> <%=vehicules.nom_agence%></td>
+				<td> <%=vehicules.STATION_DEPART%></td>
+				<td> <%=vehicules.STATION_RETOUR%></td>
+				<td> <%=vehicules.DATE_DEPART%></td>
+				<td> <%=vehicules.DATE_RETOUR%></td>
+				<td> <%=vehicules.NUMERO_CONTRAT%></td>
+				<td> <%=vehicules.marque%></td>
+				<td> <%=vehicules.libell_mod_le%></td>
 				<td>
 					<p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p>
 				</td>
@@ -40,6 +72,7 @@
 
 			</tr>
 			<%})%>
+		</tbody>
 	</table>
 
 
