--- a/views/header_.ejs
+++ b/views/header_.ejs
@@ -64,14 +64,13 @@
 					<ul class="dropdown-menu">
 						<li><a href="/f44"> Préparer </a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="/fvehicule"> Réception </a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="/checkin"> Check-in</a></li>
+						<li><a href="/fvehicule"> Réception/Checkin </a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="#"> Tâches assignées </a></li>
 					</ul>
 				</li>
 
+				<% if (user.attribut == "administrateur") { %>
 
 			<!--######-.-.-.-Agence-.-.-.-###################################################################-->
 			<li class="dropdown">
@@ -90,7 +89,7 @@
 			</ul>
 		</li>
 	</ul>
-
+			<% } %>
 	      <!--form class="navbar-form navbar-left" role="search">
 	        <div class="form-group">
 	          <input type="text" class="form-control" placeholder="Search">
