--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -17,9 +17,10 @@
 	<style>
 		body 		{
 		background-size:100% auto;
-		background-attachment: fixed;}
+		background-attachment: fixed;
+}
 
-	</style>
+			</style>
 
 	<script>
   $(function() {
@@ -37,7 +38,20 @@ dayNamesMin: ['D', 'L', 'M', 'M', 'J', 'V', 'S'],
 weekHeader: 'Sem.',
 dateFormat: 'dd-mm-yy'
 });
-$('#timepicker').timepicker();
+
+$('.next').click(function(){
+
+  var nextId = $(this).parents('.tab-pane').next().attr("id");
+  $('[href=#'+nextId+']').tab('show');
+
+});
+
+$('.first').click(function(){
+
+  $('#myWizard a:first').tab('show')
+
+});
+
 });
 </script>
 
@@ -50,8 +64,19 @@ $('#timepicker').timepicker();
 
 
 
-  <div class="container">
+  <div class="container" id="myWizard">
   <div class="col-md-4 col-md-offset-4">
+
+		<div class="navbar">
+      <div class="navbar-inner">
+            <ul class="nav nav-pills">
+               <li class="active"><a href="#step1" data-toggle="tab">Etape 1</a></li>
+               <li><a href="#step2" data-toggle="tab">Etape 2</a></li>
+            </ul>
+      </div>
+   </div>
+   <div class="tab-content">
+      <div class="tab-pane active" id="step1">
       <div class="form-area">
           <form role="form">
           <br>
@@ -107,9 +132,17 @@ $('#timepicker').timepicker();
 								<option value="g8">G8</option>
             </select>
 
-          <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer</button>
           </form>
       </div>
+			<a class="btn btn-default next" href="#">Continuer</a>
+			<br><br>
+		</div>
+			<div class="tab-pane" id="step2">
+				<p>Here is the content for step 2...</p>
+				<button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer</button>
+			</div>
+
+		</div>
   </div>
   </div>
 
