--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -13,11 +13,11 @@
 
 	<% include header.ejs %>
 
-	<script type="text/javascript">
+	<!--script type="text/javascript">
 	$(document).ready(function(){
-	    $('#myTable').DataTable();
+	    $('#myTable').DataTable(); //????
 	});
-	</script>
+</script-->
 </head>
 
 <body>
@@ -50,8 +50,9 @@
 	<tbody>
 	</div>
 		<% rowsv.forEach(function(vehicules){ %>
-			<tr>
-				<td> <%=vehicules.MVA%></td>
+			<tr id=<%=vehicules.IMMAT%> >
+
+				<td> <div contenteditable  </div><%=vehicules.MVA%> </td>
 				<td> <%=vehicules.IMMAT%></td>
 				<td> <%=vehicules.CURRENT_LOCATION_STN%></td>
 				<td> <%=vehicules.STATUT%></td>
@@ -63,7 +64,7 @@
 				<td> <%=vehicules.marque%></td>
 				<td> <%=vehicules.libell_mod_le%></td>
 				<td>
-					<p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p>
+					<p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" onclick="return confirm('Are you sure?')" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p>
 				</td>
 				<td>
 					<p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p>
@@ -84,20 +85,7 @@
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
 	        <h4 class="modal-title custom_align" id="Heading">Modifier les éléments d'un véhicule </h4>
 	      </div>
-	          <div class="modal-body">
-	          <div class="form-group">
-	        <input class="form-control " type="text" placeholder="MVA">
-	        </div>
-	        <div class="form-group">
 
-	        <input class="form-control " type="text" placeholder="Agence">
-	        </div>
-	        <div class="form-group">
-	        <textarea rows="2" class="form-control" placeholder="Commentaire : "></textarea>
-
-
-	        </div>
-	      </div>
 	          <div class="modal-footer ">
 	        <button type="button" class="btn btn-warning btn-lg" style="width: 100%;"><span class="glyphicon glyphicon-ok-sign"></span> Mettre à jour </button>
 	      </div>
