new page to change password

--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -271,7 +271,7 @@
           </label>
 
         <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_controle_carosserie" autocomplete="off"> Ok
+        <input type="radio" name="options" id="id_controle_carosserie" autocomplete="off"> Fait
         </label>
 
         </div>
@@ -282,11 +282,11 @@
         <div class="btn-group" data-toggle-name="controle_interieur" data-toggle="buttons">
 
           <label class="btn btn-primary">
-          <input type="radio" name="options" id="id_controle_interieur2" autocomplete="off" value="0" checked> À faire
+          <input type="radio" name="options" id="id_controle_interieur2" autocomplete="off" checked> À faire
           </label>
 
         <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_controle_interieur" autocomplete="off" value ="1"> Fait
+        <input type="radio" name="options" id="id_controle_interieur" autocomplete="off"> Fait
         </label>
 
         </div>
