--- a/views/header_.ejs
+++ b/views/header_.ejs
@@ -105,6 +105,8 @@
 							<% if (user.attribut == "administrateur") { %>
 							<li><a href="/admin/signup">Ajouter un utilisateur</a></li>
 							<li role="separator" class="divider"></li>
+							<li><a href="/update">Changer mot de passe</a></li>
+							<li role="separator" class="divider"></li>
 							<% } %>
 	            <li><a href="mailto:admin@email.fr">Contacter l'administrateur</a></li>
 							<li role="separator" class="divider"></li>
