--- a/views/blank1.ejs
+++ b/views/blank1.ejs
@@ -3,12 +3,10 @@
 <html>
 <head>
     <% include header.ejs %>
-  <link href="docs/css/bootstrap.min.css" rel="stylesheet">
-  <link href="docs/css/highlight.css" rel="stylesheet">
-  <link href="dist/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
-  <link href="http://getbootstrap.com/assets/css/docs.min.css" rel="stylesheet">
-  <link href="docs/css/main.css" rel="stylesheet">
-
+<link href="bootstrap.css" rel="stylesheet">
+<link href="bootstrap-switch.css" rel="stylesheet">
+<script src="jquery.js"></script>
+<script src="bootstrap-switch.js"></script>
 <style>
 /* Aspect des checkboxes */
 /* :before sert à créer la case à cocher */
@@ -82,19 +80,23 @@ Mais ça prendra du temps à écrire car faut qu'on l'adapte élément par élé
 
   <!--Body-->
     <div class="container">
-      <h1>Button fonctionnel Fait/pas fait à intégrer au f44. Regarde la console</h1>
       <div class="col-md-5 col-md-offset-4">
         <div class="form-area">
           <form action="/data_f44" method="POST">
-
-            <div class="col-sm-6 col-lg-4">
-
+                <h2 class="h4"> Sur la console, on peut voir les infos qui arrivent </h2>
               <p>
-                <input id="switch-onText" name="prototype" type="checkbox" checked data-on-text="Fait" checked data-off-text="Pas fait" unchecked>
+                <input name="test" id="switch-state" type="checkbox" checked>
               </p>
 
-              <input type="submit" class="btn btn-success" value="Confirmer"<span class="glyphicon glyphicon-ok-sign">
-</div>
+              <div data-role="fieldcontain">
+                <label for="flip-b">Flip switch:</label>
+	               <select name="slider" id="flip-b" data-role="slider">
+		                 <option value="no">No</option>
+	                   <option value="yes">Yes</option>
+                  </select>
+                </div>
+
+
               <!--br>
               <div class="text-center">
                 <h2><span class="glyphicon glyphicon-refresh"></span> Fiche F44 </h2>
@@ -113,7 +115,7 @@ Mais ça prendra du temps à écrire car faut qu'on l'adapte élément par élé
 
           <button type="submit" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Confirmer </button>
             <!button type="submit" id="bsub" name="submit" class="btn btn-primary pull-right">Envoyer</button-->
-
+            <input type="submit" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Confirmer </input>
         </form>
         </div>
       </div>
@@ -121,12 +123,10 @@ Mais ça prendra du temps à écrire car faut qu'on l'adapte élément par élé
 
 
 
-
-    <script src="docs/js/jquery.min.js"></script>
-    <script src="docs/js/bootstrap.min.js"></script>
-    <script src="docs/js/highlight.js"></script>
-    <script src="dist/js/bootstrap-switch.js"></script>
-    <script src="docs/js/main.js"></script>
+    <script>
+    $("[name='test']").bootstrapSwitch();
+    $('select').slider();
+    </script>
 </body>
 
 </html>
