autocompletion default date in reception vehicule

--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -39,6 +39,8 @@ weekHeader: 'Sem.',
 dateFormat: 'dd-mm-yy'
 });
 
+$("#datepicker").datepicker("setDate", new Date());
+
 $('.next').click(function(){
 
   var nextId = $(this).parents('.tab-pane').next().attr("id");
