transferer preparer recuperer vehicules

--- a/views/header_.ejs
+++ b/views/header_.ejs
@@ -49,11 +49,11 @@
 	          <ul class="dropdown-menu">
 	            <li><a href="/profile">Liste des vehicules</a></li>
 							<li role="separator" class="divider"></li>
-	            <li><a href="#">Recupérer</a></li>
+	            <li><a href="/recuperervehicule">Recupérer</a></li>
 							<li role="separator" class="divider"></li>
-	            <li><a href="#">Transférer</a></li>
+	            <li><a href="/transfertvehicule">Transférer</a></li>
 	            <li role="separator" class="divider"></li>
-	            <li><a href="#">À préparer</a></li>
+	            <li><a href="/preparevehicule">À préparer</a></li>
 	          </ul>
 	        </li>
 
