--- a/views/liste_vehicules.ejs
+++ b/views/liste_vehicules.ejs
@@ -209,7 +209,7 @@
 	      </div>
 	          <div class="modal-body">
 
-	       <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Etes-vous sûr de vouloir supprimer ce véhicule (ou cette tâche, info etc...) </div>
+	       <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Etes-vous sûr de vouloir supprimer ce véhicule </div>
 
 	      </div>
 	        <div class="modal-footer ">
