--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,6 +2,35 @@
 <!doctype html>
 <html>
 	<head>
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+		<script>
+			$('#edit').on('show.bs.modal', function(e) {
+					console.log("testetete");
+			});
+
+	$(".modal-dialog").click(function() {
+    var $row = $(this).closest("tr");    // Find the row
+    var $text = $row.find(".mva").text(); // Find the text
+
+    // Let's test it out
+    alert($text);
+});
+
+
+$('#myTable > tr').click(function() {
+    // row was clicked
+		alert("rowclicked");
+});
+
+$('#edit').on('show.bs.modal', function (event) {
+  var button = $(event.relatedTarget) // Button that triggered the modal
+  var recipient = button.data('whatever') // Extract info from data-* attributes
+  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+  var modal = $(this)
+  modal.find('.modal-body input').val(recipient)
+})
+		</script>
 		<% include header.ejs %>
 	</head>
 
@@ -13,7 +42,7 @@
 		<br>
   </div>
 
-	<table  class = "table table-hover table-bordered text-center">
+	<table  class = "table table-hover table-bordered text-center" id="myTable">
 		<div class="text-center">
 			<tr>
 			<th> MVA</th>
@@ -31,8 +60,8 @@
 			</tr>
 	</div>
 		<% rowsv.forEach(function(vehicules){ %>
-			<tr>
-				<td> <%=vehicules.MVA%> </td>
+			<tr onclick="input" data-toggle="modal" data-target="#edit" data-whatever="<%=vehicules.MVA%>" >
+				<td class="mva"> <%=vehicules.MVA%> </td>
 				<td> <%=vehicules.IMMAT%></td>
 				<td> <%=vehicules.CURRENT_LOCATION_STN%></td>
 				<td> <%=vehicules.STATUT%></td>
@@ -44,7 +73,7 @@
 				<td> <%=vehicules.marque%></td>
 				<td> <%=vehicules.libell_mod_le%></td>
 				<td>
-					<p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p>
+					<p data-placement="top" data-toggle="s" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p>
 				</td>
 				<td>
 					<p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p>
@@ -66,7 +95,7 @@
 	      </div>
 	          <div class="modal-body">
 	          <div class="form-group">
-	        <input class="form-control " type="text" placeholder="MVA">
+	        <input class="form-control " type="text" placeholder="MVA" value="">
 	        </div>
 	        <div class="form-group">
 
