--- a/views/f440.ejs
+++ b/views/f440.ejs
@@ -158,16 +158,16 @@
 
         <div class="form-group">
 
-          
+
         <div class="form-group">
           <h3> Aspiration intérieure </h3>
           <div class="btn-group" data-toggle-name="aspiration_interieur" data-toggle="buttons">
-            <label class="btn btn-primary active">
-              <input type="radio" name="n_aspiration_interieur" id="id_aspiration_interieur" autocomplete="off"> Ok
-            </label>
-
             <label class="btn btn-primary">
               <input type="radio" name="n_aspiration_interieur2" id="id_aspiration_interieur2" autocomplete="off" checked> À faire
+            </label>
+
+            <label class="btn btn-primary active">
+              <input type="radio" name="n_aspiration_interieur" id="id_aspiration_interieur" autocomplete="off"> Fait
             </label>
 
             <input type="hidden" name="aspiration_interieur" value=0 />
@@ -177,100 +177,149 @@
         <div class="form-group">
         <h3> Lavage extérieure </h3>
         <div class="btn-group" data-toggle-name="lavage_exterieur" data-toggle="buttons">
+          <label class="btn btn-primary">
+          <input type="radio" name="options" id="id_lavage_exterieur2" autocomplete="off" checked> À faire
+          </label>
+
         <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_lavage_exterieur" autocomplete="off"> Ok
+        <input type="radio" name="options" id="id_lavage_exterieur" autocomplete="off"> Fait
         </label>
-        <label class="btn btn-primary">
-        <input type="radio" name="options" id="id_lavage_exterieur2" autocomplete="off" checked> À faire
-        </label>
+
         </div>
         </div>
         <input type="hidden" name="lavage_exterieur" value=0 />
         <div class="form-group">
         <h3> Nettoyage vitre </h3>
         <div class="btn-group" data-toggle-name="nettoyage_vitre" data-toggle="buttons">
-        <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_nettoyage_vitre" autocomplete="off"> Ok
-        </label>
+
         <label class="btn btn-primary">
         <input type="radio" name="options" id="id_nettoyage_vitre2" autocomplete="off" checked> À faire
         </label>
+
+        <label class="btn btn-primary active">
+        <input type="radio" name="options" id="id_nettoyage_vitre" autocomplete="off"> Fait
+        </label>
+
         </div>
         </div>
         <input type="hidden" name="nettoyage_vitre" value=0 />
         <div class="form-group">
         <h3> Nettoyage parebrise intérieur </h3>
         <div class="btn-group" data-toggle-name="nettoyage_parebrise_interieur" data-toggle="buttons">
-        <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_nettoyage_parebrise_interieur" autocomplete="off"> Ok
-        </label>
+
         <label class="btn btn-primary">
         <input type="radio" name="options" id="id_nettoyage_parebrise_interieur2" autocomplete="off" checked> À faire
         </label>
+
+        <label class="btn btn-primary active">
+        <input type="radio" name="options" id="id_nettoyage_parebrise_interieur" autocomplete="off"> Fait
+        </label>
+
         </div>
         </div>
         <input type="hidden" name="nettoyage_parebrise_interieur" value=0 />
         <div class="form-group">
         <h3> Niveau huile </h3>
         <div class="btn-group" data-toggle-name="niveau_huile" data-toggle="buttons">
+          <label class="btn btn-primary">
+          <input type="radio" name="options" id="id_niveau_huile2" autocomplete="off" checked> À faire
+          </label>
+
         <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_niveau_huile" autocomplete="off"> Ok
+        <input type="radio" name="options" id="id_niveau_huile" autocomplete="off"> Fait
         </label>
-        <label class="btn btn-primary">
-        <input type="radio" name="options" id="id_niveau_huile2" autocomplete="off" checked> À faire
-        </label>
+
         </div>
         </div>
         <input type="hidden" name="niveau_huile" value=0 />
         <div class="form-group">
         <h3> Niveau lave-glace  </h3>
         <div class="btn-group" data-toggle-name="niveau_lave_glace" data-toggle="buttons">
+
+          <label class="btn btn-primary">
+          <input type="radio" name="options" id="id_niveau_lave_glace2" autocomplete="off" checked> À faire
+          </label>
+
         <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_niveau_lave_glace" autocomplete="off"> Ok
+        <input type="radio" name="options" id="id_niveau_lave_glace" autocomplete="off"> Fait
         </label>
-        <label class="btn btn-primary">
-        <input type="radio" name="options" id="id_niveau_lave_glace2" autocomplete="off" checked> À faire
-        </label>
+
         </div>
         </div>
         <input type="hidden" name="niveau_lave_glace" value=0 />
         <div class="form-group">
         <h3> Pression pneus </h3>
         <div class="btn-group" data-toggle-name="pression_pneus" data-toggle="buttons">
+
+          <label class="btn btn-primary">
+          <input type="radio" name="options" id="id_pression_pneus2" autocomplete="off" checked> À faire
+          </label>
+
         <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_pression_pneus" autocomplete="off"> Ok
-        </label>
-        <label class="btn btn-primary">
-        <input type="radio" name="options" id="id_pression_pneus2" autocomplete="off" checked> À faire
-        </label>
+        <input type="radio" name="options" id="id_pression_pneus" autocomplete="off"> Fait
+      </label>
+
         </div>
         </div>
         <input type="hidden" name="pression_pneus" value=0 />
         <div class="form-group">
         <h3> Contrôle carrosserie </h3>
         <div class="btn-group"  data-toggle-name="controle_carosserie" data-toggle="buttons">
+
+          <label class="btn btn-primary">
+          <input type="radio" name="options" id="id_controle_carosserie2" autocomplete="off" checked> À faire
+          </label>
+
         <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_controle_carosserie" autocomplete="off"> Ok
+        <input type="radio" name="options" id="id_controle_carosserie" autocomplete="off"> Fait
         </label>
-        <label class="btn btn-primary">
-        <input type="radio" name="options" id="id_controle_carosserie2" autocomplete="off" checked> À faire
-        </label>
+
         </div>
         </div>
         <input type="hidden" name="controle_carosserie" value=0 />
         <div class="form-group">
         <h3> Contrôle intérieur </h3>
         <div class="btn-group" data-toggle-name="controle_interieur" data-toggle="buttons">
+
+          <label class="btn btn-primary">
+          <input type="radio" name="options" id="id_controle_interieur2" autocomplete="off" checked> À faire
+          </label>
+
         <label class="btn btn-primary active">
-        <input type="radio" name="options" id="id_controle_interieur" autocomplete="off" value ="1"> Ok
+        <input type="radio" name="options" id="id_controle_interieur" autocomplete="off"> Fait
         </label>
-        <label class="btn btn-primary">
-        <input type="radio" name="options" id="id_controle_interieur2" autocomplete="off" value="0" checked> À faire
-        </label>
+
         </div>
         </div>
         <input type="hidden" name="controle_interieur" value=0 />
-        <button type="submit" id="bsub" name="submit" class="btn btn-primary pull-right">Envoyer</button>
+
+			  <p data-toggle="tooltip" title="su"><button class="btn btn-primary pull-right"data-toggle="modal" data-target="#delete">Envoyer</button></p>
+
+        <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+          <div class="modal-dialog">
+        <div class="modal-content">
+              <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+            <h4 class="modal-title custom_align" id="Heading"> Confirmer cette entrée </h4>
+          </div>
+              <div class="modal-body">
+
+           <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Merci de confirmer cotre saisie </div>
+
+          </div>
+            <div class="modal-footer ">
+            <button type="submit" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Confirmer </button>
+            <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Vérifier </button>
+          </div>
+          </div>
+        <!-- /.modal-content -->
+        </div>
+          <!-- /.modal-dialog -->
+        </div>
+
+        </div>
+
+        <!--button type="submit" id="bsub" name="submit" class="btn btn-primary pull-right">Envoyer</button-->
         </form>
         </div>
       </div>
