--- a/views/blank.ejs
+++ b/views/blank.ejs
@@ -9,46 +9,11 @@
   <link href="http://getbootstrap.com/assets/css/docs.min.css" rel="stylesheet">
   <link href="docs/css/main.css" rel="stylesheet">
 
-<style>
-/* Aspect des checkboxes */
-/* :before sert à créer la case à cocher */
-[type="checkbox"]:not(:checked) + label:before,
-[type="checkbox"]:checked + label:before {
-  content: '';
-  position: absolute;
-  left:0; top: 2px;
-  width: 17px; height: 17px; /* dim. de la case */
-  border: 1px solid #aaa;
-  background: #f8f8f8;
-  border-radius: 3px; /* angles arrondis */
-  box-shadow: inset 0 1px 3px rgba(0,0,0,.3) /* légère ombre interne */
-}
-
-/* Aspect général de la coche */
-[type="checkbox"]:not(:checked) + label:after,
-[type="checkbox"]:checked + label:after {
-  content: '✔';
-  position: absolute;
-  top: 0; left: 4px;
-  font-size: 14px;
-  color: #09ad7e;
-  transition: all .2s; /* on prévoit une animation */
-}
-/* Aspect si "pas cochée" */
-[type="checkbox"]:not(:checked) + label:after {
-  opacity: 0; /* coche invisible */
-  transform: scale(0); /* mise à l'échelle à 0 */
-}
-/* Aspect si "cochée" */
-[type="checkbox"]:checked + label:after {
-  opacity: 1; /* coche opaque */
-  transform: scale(1); /* mise à l'échelle 1:1 */
-}
-</style>
 
 
 
-    <script>
+
+    <!--script>
 /*
 Fonction que j'ai écrite pour les types 'boutons simples' et qui peut être utile avec du ajax si la form ne marche pas.
 Mais ça prendra du temps à écrire car faut qu'on l'adapte élément par élément...je la garde au cas où*/
@@ -75,7 +40,7 @@ Mais ça prendra du temps à écrire car faut qu'on l'adapte élément par élé
 
       };
 
-    </script>
+    </script-->
 
 </head>
 <body>
